openshift-knative-operator/cmd/operator/kodata/ingress/1.10/istio/1-net-istio-netpolicies-mesh.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webhook
  labels:
    app: webhook
    app.kubernetes.io/version: "release-v1.10"
    networking.knative.dev/ingress-provider: istio
spec:
  podSelector:
    matchLabels:
      app: webhook
  ingress:
  - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: net-istio-webhook
  labels:
    app: net-istio-webhook
    app.kubernetes.io/version: "release-v1.10"
    networking.knative.dev/ingress-provider: istio
spec:
  podSelector:
    matchLabels:
      app: net-istio-webhook
  ingress:
  - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: domainmapping-webhook
  labels:
    app: domainmapping-webhook
    app.kubernetes.io/version: "release-v1.10"
    networking.knative.dev/ingress-provider: istio
spec:
  podSelector:
    matchLabels:
      app: domainmapping-webhook
  ingress:
  - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-monitoring-ns
  namespace: knative-serving
  labels:
    app.kubernetes.io/version: "release-v1.10"
    networking.knative.dev/ingress-provider: istio
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: "openshift-monitoring"
  podSelector: {}
  policyTypes:
  - Ingress
---
